--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Centro de Belleza." />
+    <!-- SEO -->
+    <meta name="robots" content="index" />
+    <meta name="robots" content="follow" />
+    <!-- SEO -->
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;700&family=Montserrat:wght@300;400&display=swap"
+      rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com/" crossorigin />
+
+    <!-- Fonts -->
+
+    <!-- API-->
+    <link
+      rel="preconnect"
+      href="https://my-json-server.typicode.com/"
+      crossorigin
+    />
+    <link
+      rel="dns-prefetch"
+      href="https://my-json-server.typicode.com/"
+      crossorigin
+    />
+    <!-- API-->
+
+    <!-- ICONS -->
+    <script
+      defer
+      rel="dns-prefetch"
+      src="https://kit.fontawesome.com/4f82ce23a4.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- ICONS -->
     <title>Vps Doll</title>
   </head>
 
